--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
  <div>
-  <input type="button" value="⚙️" onclick="hi()">
+  <input type="button" value="⚙️☝️" onclick="hi()">
  </div>
 </body>
 </html>
